# os-projects

./: CMakeLists.txt
project1/: CMakeLists.txt  output.txt  outputLinux.txt
project1/include/: PCB.h  Predefined.h  RCB.h  Shell.h  System.h
project1/script/: build-debug.sh  build.sh  run-debug.sh  run.sh
project1/src/: main.cpp
project1/tests/: tests.cpp
project2/: CMakeLists.txt  init.txt  initTest.txt  input.txt  inputKCBasic.txt  inputTest.txt
project2/include/: MemoryManager.h
project2/script/: build.txt
project2/src/: main.cpp
